# crop-disease-prediction

./: .env.example  .gitignore  README.md  chatbot_engine.py  colab_final_cell.py  db_client.py  disease_protocols.json  doom.ipynb  gemini_client.py  intelligence_engine.py  main.py  memory.py  model_loader.py  onlinemodel.ipynb  onlinemodel.py  prompt_builder.py  pyproject.toml  requirements.txt  sarvam_client.py  speech_router.py  stt.py  supabase_schema.sql  test_chatbot.py  tts.py  tts_terminal.py  voice_input.py  voice_input_test.py
